# Spaces-Plugins

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HOST_SIDE_IMPLEMENTATION_COPYPASTE.md  HOST_SIDE_TESTS_COPYPASTE.md  LICENSE  MAIN_APP_THEME_INTEGRATION_PROMPT.md  PLUGIN_CATALOG.md  PLUGIN_GUIDE.md  README.md  build.ps1  marketplace-catalog.schema.json  plugin-manifest.schema.json  plugin-update-feed.sample.json  plugin-update-feed.schema.json  theme-package.schema.json
.github/workflows/: publish-marketplace.yml  validate-plugins.yml
docs/: CHANGELOG.md  CREATE_A_PLUGIN.md  HOST_INTEGRATION.md  HOW_IT_WORKS.md  INDEX.md  MARKETPLACE_PUBLISHING.md  PLUGINS.md  PLUGIN_README_TEMPLATE.md  RELEASE.md  SIDEBAR.md  THEME_PACKAGE_CONTRACT.md  UNUSED_FILE_AUDIT.md  ui-selector.contract.json
plugin-template/: README.md  plugin.json
plugin-template/src/: TemplatePlugin.cpp
plugins/clock-widget/: README.md  plugin.json
plugins/clock-widget/src/: ClockWidgetPlugin.cpp  ClockWidgetPlugin.h
plugins/context-actions/: README.md  plugin.json
plugins/context-actions/src/: ContextActionsPlugin.cpp  ContextActionsPlugin.h
plugins/dark-glass-theme/: README.md  plugin.json
plugins/dark-glass-theme/src/: DarkGlassThemePlugin.cpp  DarkGlassThemePlugin.h
plugins/external-provider/: README.md  plugin.json
plugins/external-provider/src/: ExternalProviderPlugin.cpp  ExternalProviderPlugin.h
plugins/fence-organizer/: README.md  plugin.json
plugins/fence-organizer/src/: FenceOrganizerPlugin.cpp  FenceOrganizerPlugin.h
plugins/folder-portal/: README.md  plugin.json
plugins/folder-portal/src/: FolderPortalPlugin.cpp  FolderPortalPlugin.h
plugins/network-drive-fence/: README.md  plugin.json
plugins/network-drive-fence/src/: NetworkDriveFencePlugin.cpp  NetworkDriveFencePlugin.h
plugins/powershell-fence/: README.md  plugin.json
plugins/powershell-fence/src/: PowerShellFencePlugin.cpp  PowerShellFencePlugin.h
plugins/productivity-actions/: README.md  plugin.json
plugins/productivity-actions/src/: ProductivityActionsPlugin.cpp  ProductivityActionsPlugin.h
plugins/rules-engine/: README.md  plugin.json  rules.sample.json  rules.schema.json
plugins/rules-engine/src/: RulesEnginePlugin.cpp  RulesEnginePlugin.h
plugins/shared/: PluginUiPatterns.h  SampleFsHelpers.h
plugins/sorting-clean-up/: README.md  plugin.json
plugins/sorting-clean-up/src/: SortingCleanupPlugin.cpp  SortingCleanupPlugin.h
plugins/visual-modes/: README.md  plugin.json
plugins/visual-modes/src/: VisualModesPlugin.cpp  VisualModesPlugin.h
plugins/widgets-plus/: README.md  plugin.json
plugins/widgets-plus/src/: WidgetsPlusPlugin.cpp  WidgetsPlusPlugin.h
scripts/: build-marketplace-artifacts.ps1  validate-plugin-manifests.ps1
